# cmd/server/main.go
@@ -4,10 +4,10 @@ import (
 	"os"
 	"path/filepath"
 
-	_ "github.com/fluffy-bunny/fluffycore-starterkit/cmd/server/docs" // docs is generated by Swag CLI, you have to import it.
-	internal "github.com/fluffy-bunny/fluffycore-starterkit/internal"
-	internal_runtime "github.com/fluffy-bunny/fluffycore-starterkit/internal/runtime"
-	internal_version "github.com/fluffy-bunny/fluffycore-starterkit/internal/version"
+	_ "github.com/fluffy-bunny/fluffycore-hanko-oidc/cmd/server/docs" // docs is generated by Swag CLI, you have to import it.
+	internal "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal"
+	internal_runtime "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal/runtime"
+	internal_version "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal/version"
 	fluffycore_cobracore_cmd "github.com/fluffy-bunny/fluffycore/cobracore/cmd"
 )
 
@@ -27,6 +27,8 @@ import (
 
 // @host localhost:9044
 // @BasePath /
+// @securityDefinitions.basic BasicAuth
+
 func main() {
 	processDirectory, err := filepath.Abs(filepath.Dir(os.Args[0]))
 	if err != nil {
