# internal/services/echo/handlers/error/error.go
@@ -1,0 +1,65 @@
+package error
+
+import (
+	"net/http"
+
+	di "github.com/fluffy-bunny/fluffy-dozm-di"
+	contracts_util "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal/contracts/util"
+	services_echo_handlers_base "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal/services/echo/handlers/base"
+	wellknown_echo "github.com/fluffy-bunny/fluffycore-hanko-oidc/internal/wellknown/echo"
+	fluffycore_contracts_common "github.com/fluffy-bunny/fluffycore/contracts/common"
+	fluffycore_echo_contracts_contextaccessor "github.com/fluffy-bunny/fluffycore/echo/contracts/contextaccessor"
+	contracts_handler "github.com/fluffy-bunny/fluffycore/echo/contracts/handler"
+	echo "github.com/labstack/echo/v4"
+)
+
+type (
+	service struct {
+		services_echo_handlers_base.BaseHandler
+		someUtil contracts_util.ISomeUtil
+	}
+)
+
+var stemService = (*service)(nil)
+
+func init() {
+	var _ contracts_handler.IHandler = stemService
+}
+
+func (s *service) Ctor(someUtil contracts_util.ISomeUtil,
+	claimsPrincipal fluffycore_contracts_common.IClaimsPrincipal,
+	echoContextAccessor fluffycore_echo_contracts_contextaccessor.IEchoContextAccessor) (*service, error) {
+	return &service{
+		BaseHandler: services_echo_handlers_base.BaseHandler{
+			ClaimsPrincipal: claimsPrincipal, EchoContextAccessor: echoContextAccessor},
+		someUtil: someUtil,
+	}, nil
+}
+
+// AddScopedIHandler registers the *service as a singleton.
+func AddScopedIHandler(builder di.ContainerBuilder) {
+	contracts_handler.AddScopedIHandleWithMetadata[*service](builder,
+		stemService.Ctor,
+		[]contracts_handler.HTTPVERB{
+			contracts_handler.GET,
+		},
+		wellknown_echo.ErrorPath,
+	)
+
+}
+
+func (s *service) GetMiddleware() []echo.MiddlewareFunc {
+	return []echo.MiddlewareFunc{}
+}
+
+// HealthCheck godoc
+// @Summary get the error page.
+// @Description get the error page.
+// @Tags root
+// @Accept */*
+// @Produce json
+// @Success 200 {object} string
+// @Router /error [get]
+func (s *service) Do(c echo.Context) error {
+	return s.Render(c, http.StatusOK, "views/error/index", map[string]interface{}{})
+}
